# doremi

./: .gitignore  LICENSE  README.md
apps/companion/: package.json  tsconfig.json
apps/companion/src/: index.ts
apps/companion/src/actions/: focusProject.ts  hotkey.ts
apps/daemon/: pyproject.toml
apps/daemon/doremi_daemon/: __init__.py  actions.py  audio.py  commands.py  enroll.py  enroll_cmd.py  hotword_template.py  main.py  transcribe.py  vad.py
configs/: doremi.example.yml
system/: doremi.service
